fix duplication of images in dark mode (#252)
* fix duplication of images in dark mode

* remove unneeded selector

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -20,9 +20,7 @@
   overflow: hidden;
 }
 
-html:not(.dark) .vp-doc img[src$='#dark']{
-  display: none;
-}
+html:not(.dark) .vp-doc img[src$='#dark'] {
   display: none;
 }
 
